--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -22,6 +22,14 @@ html, body {
   float: left;
 }
 
+.edit-icon{
+  color: white;
+}
+
+.cog-icon{
+  color: white;
+}
+
 chat-side .side-header {
   background-color: #253141;
   height: 100vh;
