--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -7,10 +7,10 @@
         %ul.side-header__box__menu
           %li.side-header__box__menu__new-group
             = link_to "#", class:"contents__btn" do
-              %i.fas.fa-edit{:style => "color:#ffffff;"}
+              %i.fas.fa-edit.edit-icon
           %li.side-header__box__menu__edit-group
             = link_to "#", class:"contents__btn" do
-              %i.fas.fa-cog{:style => "color:#ffffff;"}
+              %i.fas.fa-cog.cog-icon
     .groups
       .group
         %p.group__group-name sss
