--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -38,7 +38,7 @@
     .form
       %form.new_message
         .input-box
-          %input.input-box__text{name: "message[content]", :placeholder: "type a message", type: "text"}/
+          %input.input-box__text{name: "message[content]", placeholder: "type a message", type: "text"}/
           %label.input-box__image{for: "message_image"}
             %i.fa.fa-image
             %input#message_image.input-box__image__file{name: "message[image]", type: "file"}/
