--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,9 @@
-@import "./reset";
-@import "./messages";
+@import "_reset.scss";
+@import "config/colors";
+@import "modules/flash";
+@import "modules/group";
+@import "modules/user";
+@import "_messages.scss";
 @import "style.scss";
 @import "font-awesome-sprockets";
 @import "font-awesome";
