--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,45 +1,3 @@
-.flash-box
-.wapper
-  .chat-side
-    .side-header
-      .side-header__box
-        %p.side-header__box__user-name toshi
-        %ul.side-header__box__menu
-          %li.side-header__box__menu__new-group
-            = link_to "#", class:"contents__btn" do
-              %i.fas.fa-edit.edit-icon
-          %li.side-header__box__menu__edit-group
-            = link_to "#", class:"contents__btn" do
-              %i.fas.fa-cog.cog-icon
-    .groups
-      .group
-        %p.group__group-name sss
-        %p.group__latest-message メッセージがありません
-  .chat-main
-    .main-header
-      .main-header__left-box
-        %h2.main-header__left-box__current-group
-          sss
-        %ul.main-header__left-box__member-list
-          "menber"
-          %li.main-header__left-box__member-list__member toshi
-      .main-header__edit-btn Edit
-    .messages
-      .message
-        .message__upper-info
-          %p.message__upper-info__talker toshi
-          %p.message__upper-info__date 2019/12/17(Tue) 07:59:42
-        %p.message__text ssss
-      .message
-        .message__upper-info
-          %p.message__upper-info__talker toshi
-          %p.message__upper-info__date 2019/12/17(Tue) 07:59:42
-        %p.message__text aaaa
-    .form
-      %form.new_message
-        .input-box
-          %input.input-box__text{name: "message[content]", placeholder: "type a message", type: "text"}/
-          %label.input-box__image{for: "message_image"}
-            %i.fa.fa-image
-            %input#message_image.input-box__image__file{name: "message[image]", type: "file"}/
-        %input.submit-btn{"data-disable-with": "Send", name: "commit", type: "submit", value: "Send"}/
+.wrapper
+  = render "_side_bar"
+  = render "_main_chat"
