--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -1,1 +1,29 @@
-.main-bar
+
+.chat-main
+  .main-header
+    .main-header__left-box
+      %h2.main-header__left-box__current-group
+        sss
+      %ul.main-header__left-box__member-list
+        "menber"
+        %li.main-header__left-box__member-list__member toshi
+    .main-header__edit-btn Edit
+  .messages
+    .message
+      .message__upper-info
+        %p.message__upper-info__talker toshi
+        %p.message__upper-info__date 2019/12/17(Tue) 07:59:42
+      %p.message__text ssss
+    .message
+      .message__upper-info
+        %p.message__upper-info__talker toshi
+        %p.message__upper-info__date 2019/12/17(Tue) 07:59:42
+      %p.message__text aaaa
+  .form
+    %form.new_message
+      .input-box
+        %input.input-box__text{name: "message[content]", placeholder: "type a message", type: "text"}/
+        %label.input-box__image{for: "message_image"}
+          %i.fa.fa-image
+          %input#message_image.input-box__image__file{name: "message[image]", type: "file"}/
+      %input.submit-btn{"data-disable-with": "Send", name: "commit", type: "submit", value: "Send"}/
