--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -1,21 +1,22 @@
-.chat-side
-  .side-header
-    .side-header__box
-      %p.side-header__box__user-name
-        = current_user.name
-      %ul.side-header__box__menu
-        %li.side-header__box__menu__new-group
-          = link_to new_group_path , class:"contents__btn" do
-            %i.fas.fa-edit.edit-icon
-        %li.side-header__box__menu__edit-group
-          = link_to edit_user_path(current_user) , class:"contents__btn" do
-            %i.fas.fa-cog.cog-icon
-  .groups
-    - current_user.groups.each do |group|
-      .group
-        = link_to '#' do
-          .group__name
-            = group.name
-        .group__message
-          メッセージはまだありません。
-              
+.wrapper
+  = render "layouts/side_bar"
+-# .chat-side
+-#   .side-header
+-#     .side-header__box
+-#       %p.side-header__box__user-name
+-#         = current_user.name
+-#       %ul.side-header__box__menu
+-#         %li.side-header__box__menu__new-group
+-#           = link_to new_group_path , class:"contents__btn" do
+-#             %i.fas.fa-edit.edit-icon
+-#         %li.side-header__box__menu__edit-group
+-#           = link_to edit_user_path(current_user) , class:"contents__btn" do
+-#             %i.fas.fa-cog.cog-icon
+-#   .groups
+-#     - current_user.groups.each do |group|
+-#       .group
+-#         = link_to groups_edit_path do
+-#           .group__name
+-#             = group.name
+-#         .group__message
+-#           メッセージはまだありません。          
