--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -1,9 +1,10 @@
-- if group.errors.any?
-  .chat-group-form__errors
-    %h2= "#{group.errors.full_messages.count}件のエラーが発生しました。"
-    %ul
-      - group.errors.full_messages.each do |message|
-        %li= message
+= form_for group do |f|
+  - if group.errors.any?
+    .chat-group-form__errors
+      %h2= "#{group.errors.full_messages.count}件のエラーが発生しました。"
+      %ul
+        - group.errors.full_messages.each do |message|
+          %li= message
   .chat-group-form__field
     .chat-group-form__field--left
       = f.label :name, class: 'chat-group-form__label'
