--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -1,13 +1,17 @@
-
+.messages
+  =render @messages
 .chat-main
   .main-header
     .main-header__left-box
       %h2.main-header__left-box__current-group
-        sss
+        = @group.name
       %ul.main-header__left-box__member-list
         "menber"
-        %li.main-header__left-box__member-list__member toshi
-    .main-header__edit-btn Edit
+        %li.main-header__left-box__member-list__member
+          = current_user.name
+    .main-header__edit-btn
+      = link_to "Edit" , edit_group_path(@group)
+      -# = link to '#'
   .messages
     .message
       .message__upper-info
@@ -20,10 +24,10 @@
         %p.message__upper-info__date 2019/12/17(Tue) 07:59:42
       %p.message__text aaaa
   .form
-    %form.new_message
-      .input-box
-        %input.input-box__text{name: "message[content]", placeholder: "type a message", type: "text"}/
-        %label.input-box__image{for: "message_image"}
-          %i.fa.fa-image
-          %input#message_image.input-box__image__file{name: "message[image]", type: "file"}/
-      %input.submit-btn{"data-disable-with": "Send", name: "commit", type: "submit", value: "Send"}/
+    = form_for [@group, @message] do |f|
+      = f.text_field :content, class: 'form__message', placeholder: 'type a message'
+      .form__mask
+        = f.label :image, class: 'form__mask__image' do
+          = icon('fas', 'image', class: 'icon')
+          = f.file_field :image, class: 'hidden'
+      = f.submit 'Send', class: 'form__submit'    
