--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -9,7 +9,7 @@
 -#       %p.lower-message__content
 -#         = message.content
 -#     = image_tag message.image.url, class: 'lower-message__image' if message.image.present?
-
+.message{data: {message: {id: message.id}}}
 .message
   .message__upper-info
     .message__upper-info__talker
