--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -102,6 +102,7 @@ chat-side .side-header {
     border-bottom: solid 1px #eee;
     overflow: scroll;
     padding: 0 40px;  
+    
 
     &__left-box {
       margin-top: 35px;
@@ -113,9 +114,13 @@ chat-side .side-header {
       padding: 0 20px;
       margin-top: 30px;
       border: solid 1px #38aef0;
-      color: #38aef0;
       position: absolute;
       right: 40px;
+    }
+
+    &__edit-btn a{
+      color: #38aef0;
+      text-decoration: none;
     }
   
     &__left-box__current-group {
