--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -151,6 +151,11 @@ chat-side .side-header {
       padding-bottom: 40px;
     }
 
+    .lower-message{
+      font-size: 14px;
+      color: #434A54;
+    }
+
     .message__upper-info {
       display: flex;
       margin-bottom: 10px;
